# chiaki-ng

./: .gitignore  CUSTOM_TRIPLET_EXPLAINED.md  __scachi_notes.txt  make_deploy.bat  make_deploy.sh  meson.ini  my_build_chiaki.bat  my_build_chiaki_lib_vc.bat  x64-windows-mixed.cmake
.github/workflows/: build-msys2.yml
cli/: CMakeLists.txt  README_control.md  _notes_cli_try
cli/src/: control.c  qt_dump_keys.cpp
gui/: CMakeLists.txt
gui/include/: controllermanager.h  qmlbackend.h  qmlcontroller.h  qmlsettings.h  settings.h
gui/src/: controllermanager.cpp  qmlbackend.cpp  qmlcontroller.cpp  qmlsettings.cpp
gui/src/qml/: SettingsDialog.qml
lib/: CMakeLists.txt
lib/include/chiaki/: common.h
lib/protobuf/: CMakeLists.txt
lib/src/: ctrl.c  regist.c  session.c
lib/src/remote/: holepunch.c  rudp.c
scripts/: build-libplacebo-windows.sh
